--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-numpy==1.14.1
-opencv-contrib-python==3.4.0.12
-opencv-python==3.4.0.12
-pkg-resources==0.0.0
+numpy>=1.14.1
+opencv-contrib-python>=3.4.0.12
+opencv-python>=3.4.0.12
